# NetflixOG_4

./: .gitignore  README.md  docker-compose.yml
NOG_Android/: settings.gradle.kts
NOG_Android/app/: build.gradle  build.gradle.kts
NOG_Android/gradle/: libs.versions.toml
android/app/: build.gradle.kts
netflix_og/: DockerfileReact  package-lock.json  package.json
netflix_og/public/: SignIn.css  SignIn.html  index.css  index.html
src/: DockerfileNode  app.js
src/controllers/: authentication.js  category.js  movie.js  token.js  user.js
src/cppCode/: App.cpp  App.hpp  CMakeLists.txt  CommandParser.cpp  CommandParser.hpp  DataInterface.hpp  DataManager.cpp  DataManager.hpp  DeleteCommand.cpp  DeleteCommand.hpp  DockerfileProject  GetCommand.cpp  GetCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  ICommand.hpp  IExecutor.hpp  Movie.cpp  Movie.hpp  MultiThreadExecutor.cpp  MultiThreadExecutor.hpp  PatchCommand.cpp  PatchCommand.hpp  PostCommand.cpp  PostCommand.hpp  Server.cpp  ThreadPool.cpp  ThreadPool.hpp  User.cpp  User.hpp
src/middlewares/: authentication.js  upload.js
src/models/: category.js  counter.js  movie.js  user.js
src/routes/: categories.js  movie.js  token.js  user.js
src/services/: category.js  connection.js  counter.js  movie.js  (+2 more)
src/tests/: CMakeLists.txt  CommandParserTest.cpp  DataManagerTestNewNew.cpp  DataTest.cpp  DeleteCommandTest.cpp  DockerfileTest  GetCommandTest.cpp  HelpCommandTest.cpp  LoadDataTest.cpp  PatchCommandTest.cpp  PostCommandTest.cpp  ServerIntegrationTest.cpp  baseTest.cpp  edgeCasesTest.cpp  extendedTest.cpp
(+164 files in other folders)
